# my-python-sandpit

./: .gitignore  README.md  exception_001.py  set-my-python-sandpit-git-vars.txt
TDD/: tdd.py
cherrypy/: requirements.txt
data_analysis_sandpit/: requirements.txt
flask/: flask_db_exploration_001.py  flask_exploration_001.py  flask_exploration_002.py  flask_exploration_003.py  flask_exploration_004.py  flask_exploration_005.py  flask_exploration_006.py  flask_exploration_007.py  flask_kafka_consumer_001.py  flask_kafka_exploration_001.py  flask_kafka_exploration_002.py  flask_redis_exploration_001.py  flask_rest_api_example_001.py  flask_restful_example_001.py  requirements.txt
flblueprints/: MANIFEST.in  config.py  main.py  requirements.txt  setup.py
flbpdivisional/: config.py  main.py  setup.py
flbpfunctional/: Dockerfile  config.py  main.py  requirements.txt  setup.cfg  setup.py
flbpfunctional/flbpfunctional/: __init__.py  models.py
flbpfunctional/flbpfunctional/views/: __init__.py  admin.py
flrestswagger/: fl_rest_api_app.py  fl_rest_api_app_blueprint.py  fl_rest_api_models.py  fl_rest_api_views.py  fl_rest_api_views_blueprint.py  requirements.txt
kryptica/: requirements.txt
pibm-training/: requirements.txt
pyZumba/: ImmStrings.py  MarkerExample.py  ducktyping.py  funcsandmore.py  gyaan.py  lambdasandmore.py  ltd.py  mutationsandmore.py  pyZumba.py  pyvenv.cfg  turty.py
pyfiler/: requirements.txt
pyspar/: DogClass.py  __init__.py  turtle.py
python-docs/: Data-Sciences-and-Python.docx  Python-notes.txt  all_about_jupyter_notebooks.docx  (+3 more)
(+443 files in other folders)
