#setup.cfg
#pbr
[metadata]
name = flblfunctional
author = Sanjiv Nagraj
author-email = zeppertrek@gmail.com
summary = flbpfunctional FLASK application 
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
#home-page = https://launchpad.net/pbr
#project_urls =
#    Bug Tracker = https://bugs.launchpad.net/pbr/
#    Documentation = https://docs.openstack.org/pbr/
#    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
#license = Apache-2
#classifier =
#    Development Status :: 1 - Beta
#    Environment :: Console
#    Environment :: OpenSource
#    Intended Audience :: Developers
#    Intended Audience :: Information Technology
#    License :: OSI Approved :: Apache Software License
#    Operating System :: OS Independent
#    Programming Language :: Python
#keywords =
#    setup
#    distutils

[files]
#config.py
#main.py
packages =
    flbpfunctional

data_files =
#    main.py = main.py
#    config.py = config.py 

#data_files =
#    etc/pbr = etc/*
#    etc/init =
#        pbr.packaging.conf
#        pbr.version.conf

#[entry_points]
#console_scripts =
#    pbr = pbr.cmd:main
#pbr.config.drivers =
#    plain = pbr.cfg.driver:Plain